@@ -81,6 +81,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6085: In http.server.py SimpleHTTPServer.address_string returns the
+  client ip address instead client hostname. Patch by Charles-François Natali.
+
 - Issue #14309: Deprecate time.clock(), use time.perf_counter() or
   time.process_time() instead.
 
